--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,7 +1,7 @@
 .naz-button{
     border: 0;
     border-radius: 20px;
-    padding: 1% 2% 1% 2%;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     cursor: pointer;
     font-size: 1.1rem;
     color: aliceblue;
